--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -2,6 +2,10 @@
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="General">
-    	<EditTextPreference android:key="SiteUrl" android:title="Site Url" android:summary="The site to upload data" android:defaultValue="http://rcbu.appspot.com" />
+    	<eu.grigis.gaetan.rc.elements.MailsAccountPreference android:key="MailAccount" android:title="Mail Account" android:summary="The account used to access to your phone from the web" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="Advance">
+    	<EditTextPreference android:key="SiteUrl" android:title="Site Url" android:summary="The site to upload data" android:defaultValue="https://rcbuandroid.appspot.com" />
+    	<EditTextPreference android:key="SenderAdress" android:title="Sender Adress" android:summary="This is the package sender's adress, this shouldn't be changed unless you know what you're doing" android:defaultValue="loupzeur@gmail.com" />
     </PreferenceCategory>
 </PreferenceScreen>
