--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="General">
-    	<eu.grigis.gaetan.rc.elements.MailsAccountPreference android:key="MailAccount" android:title="Mail Account" android:summary="The account used to access to your phone from the web" />
-		<CheckBoxPreference android:key="UseGPS" android:title="Use GPS" android:summary="Use true GPS location instead of last known location" android:defaultValue="true"/>
+    <PreferenceCategory android:title="@string/prefConfGeneral">
+    	<eu.grigis.gaetan.rc.elements.MailsAccountPreference android:key="MailAccount" android:title="@string/prefTitleMailAccount" android:summary="@string/prefSumMailAccount" />
+		<CheckBoxPreference android:key="UseGPS" android:title="@string/prefTitleUseGps" android:summary="@string/prefSumUseGps" android:defaultValue="false"/>
     </PreferenceCategory>
-    <PreferenceCategory android:title="Advanced">
-    	<EditTextPreference android:key="SiteUrl" android:title="Site Url" android:summary="The site to upload data" android:defaultValue="https://rcbuandroid.appspot.com" />
-    	<EditTextPreference android:key="SenderAdress" android:title="Sender Adress" android:summary="This is the package sender's adress, this shouldn't be changed unless you know what you're doing" android:defaultValue="loupzeur@gmail.com" />
-    	<EditTextPreference android:key="RegistrationID" android:title="Registration ID" android:summary="This is the RegistrationID of your phone, this shouldn't be changed unless you know what you're doing" android:defaultValue="" />
+    <PreferenceCategory android:title="@string/prefConfAdvanced">
+    	<EditTextPreference android:key="SiteUrl" android:title="@string/prefTitleSiteurl" android:summary="@string/prefSumSiteurl" android:defaultValue="https://rcbuandroid.appspot.com" />
+    	<EditTextPreference android:key="SenderAdress" android:title="@string/prefTitleSender" android:summary="@string/prefSumSender" android:defaultValue="loupzeur@gmail.com" />
+    	<EditTextPreference android:key="RegistrationID" android:title="@string/prefTitleRegid" android:summary="@string/prefSumRegid" android:defaultValue="" />
     </PreferenceCategory>
 </PreferenceScreen>
