--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -4,6 +4,12 @@
     <PreferenceCategory android:title="@string/prefConfGeneral">
     	<eu.grigis.gaetan.rc.elements.MailsAccountPreference android:key="MailAccount" android:title="@string/prefTitleMailAccount" android:summary="@string/prefSumMailAccount" />
 		<CheckBoxPreference android:key="UseGPS" android:title="@string/prefTitleUseGps" android:summary="@string/prefSumUseGps" android:defaultValue="false"/>
+		<ListPreference android:key="GPSTimeOut" 
+			android:title="@string/prefTitleTimeOutGps" 
+			android:summary="@string/prefSumTimeOutGps" 
+			android:entries="@array/timeOutSec" 
+			android:entryValues="@array/timeOutSecValue" 
+			android:defaultValue="30"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/prefConfAdvanced">
     	<EditTextPreference android:key="SiteUrl" android:title="@string/prefTitleSiteurl" android:summary="@string/prefSumSiteurl" android:defaultValue="https://rcbuandroid.appspot.com" />
